fix overflow

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 }
 body section {
   min-height: 100vh;
+  overflow: hidden;
 }
 body .container {
   max-width: 1140px;
